fixed form page aligning

--- a/src/styles/pages/arbiter-form/_arbiter-form.scss
+++ b/src/styles/pages/arbiter-form/_arbiter-form.scss
@@ -11,6 +11,7 @@
     border-radius: 10px;
     background-image: linear-gradient(to top, rgba(215, 215, 215, 0.36), rgba(252, 252, 252, 0.36)), linear-gradient(rgba(255, 255, 255, 0.36), rgba(255, 255, 255, 0.36));
     box-shadow: 0px 7px 13px 0 rgba(1, 2, 2, 0.15);
+    margin: auto;
     margin-bottom: 90px;
   }
 
